# stellar-indexer

./: LICENSE  README.md
economic-fact-engine/: Cargo.toml
economic-fact-engine/.kiro/specs/economic-fact-engine/: .config.kiro  design.md  requirements.md  tasks.md
economic-fact-engine/.kiro/specs/private-remittance-corridor/: .config.kiro  design.md  requirements.md  tasks.md
economic-fact-engine/contracts/shielded-pool/: Cargo.toml
economic-fact-engine/contracts/shielded-pool/src/: lib.rs
economic-fact-engine/contracts/verifier-contract/: Cargo.toml
economic-fact-engine/contracts/verifier-contract/src/: lib.rs
economic-fact-engine/crates/corridor-sdk/: Cargo.toml
economic-fact-engine/crates/corridor-sdk/src/: lib.rs
economic-fact-engine/crates/errors/: Cargo.toml
economic-fact-engine/crates/errors/src/: lib.rs
economic-fact-engine/crates/types/: Cargo.toml
economic-fact-engine/crates/types/src/: lib.rs
economic-fact-engine/crates/zk-circuits/: Cargo.toml
economic-fact-engine/crates/zk-circuits/src/: compliance.rs  deposit.rs  lib.rs  prover.rs  transfer_circuit.rs  withdrawal.rs
economic-fact-engine/services/compliance-oracle/: Cargo.toml
economic-fact-engine/services/compliance-oracle/src/: main.rs
economic-fact-engine/services/off-ramp-service/: Cargo.toml
economic-fact-engine/services/off-ramp-service/src/: main.rs
economic-fact-engine/services/on-ramp-service/: Cargo.toml
economic-fact-engine/services/on-ramp-service/src/: main.rs
