[package]
name = "zk-circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-groth16          = { version = "0.4.0", default-features = false }
ark-bls12-381        = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-crypto-primitives = { version = "0.4.0", default-features = false }
ark-relations        = { version = "0.4.0", default-features = false }
ark-r1cs-std         = { version = "0.4.0", default-features = false }
ark-ff               = { version = "0.4.2", default-features = false }
ark-ec               = { version = "0.4.2", default-features = false }
