[package]
name = "zk-circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-groth16          = { version = "0.4.0", default-features = false, features = ["r1cs"] }
ark-bls12-381        = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["r1cs", "crh"] }
ark-relations        = { version = "0.4.0", default-features = false }
ark-r1cs-std         = { version = "0.4.0", default-features = false }
ark-ff               = { version = "0.4.2", default-features = false }
ark-ec               = { version = "0.4.2", default-features = false }
ark-serialize        = { version = "0.4.2", default-features = false }
ark-snark            = { version = "0.4.0", default-features = false }
sha2                 = { version = "0.10", default-features = false }
thiserror            = "1"
types                = { path = "../../crates/types" }
rand                 = "0.8"
